@@ -33,6 +33,7 @@ version <next>:
 - tlut2 video filter
 - floodfill video filter
 - pseudocolor video filter
+- raw G.726 demuxer, left- and right-justified
 
 version 3.3:
 - CrystalHD decoder moved to new decode API
